@@ -18,7 +18,6 @@ package org.apache.kafka.connect.mirror;
 
 import org.apache.kafka.common.config.ConfigDef;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -35,7 +34,7 @@ public class MirrorCheckpointTaskConfig extends MirrorCheckpointConfig {
     Set<String> taskConsumerGroups() {
         List<String> fields = getList(TASK_CONSUMER_GROUPS);
         if (fields == null || fields.isEmpty()) {
-            return Collections.emptySet();
+            return Set.of();
         }
         return new HashSet<>(fields);
     }
